--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,9 +23,15 @@
         tools:text="Bar"/>
 
     <Button
-        android:id="@+id/user_save"
+        android:id="@+id/btn_save"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/save"/>
+
+    <Button
+            android:id="@+id/btn_users"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/users"/>
 
 </LinearLayout>
