--- a/app/src/main/res/layout/activity_todos.xml
+++ b/app/src/main/res/layout/activity_todos.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".users.UsersActivity">
+        tools:context=".todos.TodosActivity">
 
     <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_users"/>
+    <include layout="@layout/content_todos"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
