--- a/app/src/main/res/layout/content_todos.xml
+++ b/app/src/main/res/layout/content_todos.xml
@@ -1,9 +1,9 @@
 <fragment android:id="@+id/fragment"
-          android:name="com.chikeandroid.gdgdevfestmvp.users.UsersFragment"
+          android:name="com.chikeandroid.gdgdevfestmvp.todos.TodosFragment"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
-          tools:layout="@layout/fragment_users"/>
+          tools:layout="@layout/fragment_todos"/>
