--- a/app/src/main/res/layout/fragment_todos.xml
+++ b/app/src/main/res/layout/fragment_todos.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/users_recycler_view"
+            android:id="@+id/todos_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
